fix event header text wrapping

--- a/packages/heartwood-components/public/stylesheets/global.css
+++ b/packages/heartwood-components/public/stylesheets/global.css
@@ -3936,7 +3936,10 @@ html {
   background-color: rgba(0, 0, 0, 0.05); }
 
 .event-details-header__text-wrapper {
-  flex: 1 0 auto; }
+  flex: 1 1 auto; }
+
+.event-details-header__actions-wrapper {
+  flex: 0 0 auto; }
 
 .event-details-header__label {
   font-size: 0.6875rem;
